--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,62 +1,78 @@
 # 2024-03-12
 
-共 323 条
+共 338 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 21:00:52 GMT+0800 (China Standard Time) -->
-1. [广州车祸目击者称肇事车撞人后没停](https://so.toutiao.com/search?keyword=广州车祸目击者称肇事车撞人后没停)
-1. [中国将会造多少航母？海军政委回应](https://so.toutiao.com/search?keyword=中国将会造多少航母？海军政委回应)
-1. [一组数字带你看中国的绿色奇迹](https://so.toutiao.com/search?keyword=一组数字带你看中国的绿色奇迹)
-1. [特朗普：要用加税让中企到美国造车](https://so.toutiao.com/search?keyword=特朗普：要用加税让中企到美国造车)
-1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
-1. [理想L系命名调整 新增Ultra车型](https://so.toutiao.com/search?keyword=理想L系命名调整+新增Ultra车型)
+<!-- 最后更新时间 Tue Mar 12 2024 22:00:49 GMT+0800 (China Standard Time) -->
+1. [新款奔驰长轴距C级上市 售价微涨](https://so.toutiao.com/search?keyword=新款奔驰长轴距C级上市+售价微涨)
 1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
+1. [一组数字带你看中国的绿色奇迹](https://so.toutiao.com/search?keyword=一组数字带你看中国的绿色奇迹)
+1. [女子取出自己10岁时的存款](https://so.toutiao.com/search?keyword=女子取出自己10岁时的存款)
 1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
+1. [特朗普：要用加税让中企到美国造车](https://so.toutiao.com/search?keyword=特朗普：要用加税让中企到美国造车)
+1. [中国将会造多少航母？海军政委回应](https://so.toutiao.com/search?keyword=中国将会造多少航母？海军政委回应)
+1. [网友热议清明调休：摒弃拼凑式假期](https://so.toutiao.com/search?keyword=网友热议清明调休：摒弃拼凑式假期)
+1. [微信朋友圈显示的横线为啥有长有短](https://so.toutiao.com/search?keyword=微信朋友圈显示的横线为啥有长有短)
 1. [外交部回应特朗普威胁对华加征关税](https://so.toutiao.com/search?keyword=外交部回应特朗普威胁对华加征关税)
-1. [女主播泼水节遭围攻 同事出手帮助](https://so.toutiao.com/search?keyword=女主播泼水节遭围攻+同事出手帮助)
 1. [男子对女模特从下向上拍 客服回应](https://so.toutiao.com/search?keyword=男子对女模特从下向上拍+客服回应)
 1. [公园把树挖了搞植树节？不实](https://so.toutiao.com/search?keyword=公园把树挖了搞植树节？不实)
-1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
-1. [中伊俄海上联合军事演习开幕](https://so.toutiao.com/search?keyword=中伊俄海上联合军事演习开幕)
-1. [点读机女孩MCN道歉：时间表述纰漏](https://so.toutiao.com/search?keyword=点读机女孩MCN道歉：时间表述纰漏)
-1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
-1. [黑车变道与白车并行时突然开车门](https://so.toutiao.com/search?keyword=黑车变道与白车并行时突然开车门)
-1. [男子因买彩票中奖被泄露报警](https://so.toutiao.com/search?keyword=男子因买彩票中奖被泄露报警)
-1. [韩作家称“汉字由韩国人创造”](https://so.toutiao.com/search?keyword=韩作家称“汉字由韩国人创造”)
-1. [官方：点读机女孩视频系去年拍摄](https://so.toutiao.com/search?keyword=官方：点读机女孩视频系去年拍摄)
-1. [杨紫琼回应奥斯卡颁奖礼上疑遭歧视](https://so.toutiao.com/search?keyword=杨紫琼回应奥斯卡颁奖礼上疑遭歧视)
-1. [外交部：敦促韩方不要跟风炒作](https://so.toutiao.com/search?keyword=外交部：敦促韩方不要跟风炒作)
-1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
-1. [爷爷为给孙子治病天天吃泡面馒头](https://so.toutiao.com/search?keyword=爷爷为给孙子治病天天吃泡面馒头)
 1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
-1. [网友热议清明调休：摒弃拼凑式假期](https://so.toutiao.com/search?keyword=网友热议清明调休：摒弃拼凑式假期)
-1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
+1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
+1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
+1. [车辆隧道内突然变道加速开车门](https://so.toutiao.com/search?keyword=车辆隧道内突然变道加速开车门)
+1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
+1. [点读机女孩MCN道歉：时间表述纰漏](https://so.toutiao.com/search?keyword=点读机女孩MCN道歉：时间表述纰漏)
+1. [女主播泼水节遭围攻 同事出手帮助](https://so.toutiao.com/search?keyword=女主播泼水节遭围攻+同事出手帮助)
+1. [名嘴谈台媒又在关注解放军航母动态](https://so.toutiao.com/search?keyword=名嘴谈台媒又在关注解放军航母动态)
+1. [杨紫琼回应奥斯卡颁奖礼上疑遭歧视](https://so.toutiao.com/search?keyword=杨紫琼回应奥斯卡颁奖礼上疑遭歧视)
+1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
 1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
-1. [船老大为救16人斩断价值36万元蟹笼](https://so.toutiao.com/search?keyword=船老大为救16人斩断价值36万元蟹笼)
+1. [微信：朋友圈不得发布这些内容](https://so.toutiao.com/search?keyword=微信：朋友圈不得发布这些内容)
+1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
+1. [金店为何在低收入县城遍地开花](https://so.toutiao.com/search?keyword=金店为何在低收入县城遍地开花)
+1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
+1. [外交部：敦促韩方不要跟风炒作](https://so.toutiao.com/search?keyword=外交部：敦促韩方不要跟风炒作)
+1. [爷爷为给孙子治病天天吃泡面馒头](https://so.toutiao.com/search?keyword=爷爷为给孙子治病天天吃泡面馒头)
+1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
+1. [理想L系命名调整 新增Ultra车型](https://so.toutiao.com/search?keyword=理想L系命名调整+新增Ultra车型)
+1. [男子因买彩票中奖被泄露报警](https://so.toutiao.com/search?keyword=男子因买彩票中奖被泄露报警)
+1. [俄军称在第聂伯河前线摧毁乌军快艇](https://so.toutiao.com/search?keyword=俄军称在第聂伯河前线摧毁乌军快艇)
+1. [俄军一架载有15人的运输机坠毁](https://so.toutiao.com/search?keyword=俄军一架载有15人的运输机坠毁)
+1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
+1. [烫伤女孩为修复疤痕头部35次注水](https://so.toutiao.com/search?keyword=烫伤女孩为修复疤痕头部35次注水)
+1. [救护车为避让行人冲破护栏掉进沟里](https://so.toutiao.com/search?keyword=救护车为避让行人冲破护栏掉进沟里)
+1. [宁静回应与纪凌尘搭戏](https://so.toutiao.com/search?keyword=宁静回应与纪凌尘搭戏)
+1. [官方：点读机女孩视频系去年拍摄](https://so.toutiao.com/search?keyword=官方：点读机女孩视频系去年拍摄)
 1. [张本美和赢球后秀起女团舞](https://so.toutiao.com/search?keyword=张本美和赢球后秀起女团舞)
 1. [深圳多名学生在校午餐后呕吐腹泻](https://so.toutiao.com/search?keyword=深圳多名学生在校午餐后呕吐腹泻)
+1. [媒体：需警惕对点读机女孩发起网暴](https://so.toutiao.com/search?keyword=媒体：需警惕对点读机女孩发起网暴)
+1. [物业劝阻老人拉线充电动车被追打](https://so.toutiao.com/search?keyword=物业劝阻老人拉线充电动车被追打)
+1. [媒体人：伊万谈纪律反映国足老问题](https://so.toutiao.com/search?keyword=媒体人：伊万谈纪律反映国足老问题)
+1. [普通人该如何防范“X疾病”](https://so.toutiao.com/search?keyword=普通人该如何防范“X疾病”)
+1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
+1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
+1. [广州致11人受伤车祸区域已恢复秩序](https://so.toutiao.com/search?keyword=广州致11人受伤车祸区域已恢复秩序)
+1. [知情人：大马赴杭失联女子已被找到](https://so.toutiao.com/search?keyword=知情人：大马赴杭失联女子已被找到)
+1. [中信建投：黄金价格创新高](https://so.toutiao.com/search?keyword=中信建投：黄金价格创新高)
+1. [广州车祸目击者称肇事车撞人后没停](https://so.toutiao.com/search?keyword=广州车祸目击者称肇事车撞人后没停)
+1. [中伊俄海上联合军事演习开幕](https://so.toutiao.com/search?keyword=中伊俄海上联合军事演习开幕)
+1. [黑车变道与白车并行时突然开车门](https://so.toutiao.com/search?keyword=黑车变道与白车并行时突然开车门)
+1. [韩作家称“汉字由韩国人创造”](https://so.toutiao.com/search?keyword=韩作家称“汉字由韩国人创造”)
+1. [船老大为救16人斩断价值36万元蟹笼](https://so.toutiao.com/search?keyword=船老大为救16人斩断价值36万元蟹笼)
 1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
 1. [台当局：解放军联合战备警巡常态化](https://so.toutiao.com/search?keyword=台当局：解放军联合战备警巡常态化)
 1. [一公司被取消装备采购招标代理资格](https://so.toutiao.com/search?keyword=一公司被取消装备采购招标代理资格)
-1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
-1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
-1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
 1. [中方回应日方要求撤销水产进口管制](https://so.toutiao.com/search?keyword=中方回应日方要求撤销水产进口管制)
 1. [被评政治生态恶劣的这地书记任上被查](https://so.toutiao.com/search?keyword=被评政治生态恶劣的这地书记任上被查)
 1. [特朗普：不会允许各国弃用美元](https://so.toutiao.com/search?keyword=特朗普：不会允许各国弃用美元)
-1. [宁静回应与纪凌尘搭戏](https://so.toutiao.com/search?keyword=宁静回应与纪凌尘搭戏)
 1. [特朗普称自己是“关税的信徒”](https://so.toutiao.com/search?keyword=特朗普称自己是“关税的信徒”)
 1. [今日两市主力资金净流入53.88亿元](https://so.toutiao.com/search?keyword=今日两市主力资金净流入53.88亿元)
 1. [罗辑思维重启罗振宇讲文明之旅](https://so.toutiao.com/search?keyword=罗辑思维重启罗振宇讲文明之旅)
-1. [中信建投：黄金价格创新高](https://so.toutiao.com/search?keyword=中信建投：黄金价格创新高)
 1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
-1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
-1. [广州致11人受伤车祸区域已恢复秩序](https://so.toutiao.com/search?keyword=广州致11人受伤车祸区域已恢复秩序)
 1. [月薪八千招不到快递员背后](https://so.toutiao.com/search?keyword=月薪八千招不到快递员背后)
 1. [外交部：中菲在南海不存在领土争议](https://so.toutiao.com/search?keyword=外交部：中菲在南海不存在领土争议)
 1. [“高频指标”释放经济运行积极信号](https://so.toutiao.com/search?keyword=“高频指标”释放经济运行积极信号)
 1. [泽连斯基：欢迎北约相关人员来乌](https://so.toutiao.com/search?keyword=泽连斯基：欢迎北约相关人员来乌)
-1. [物业劝阻老人拉线充电动车被追打](https://so.toutiao.com/search?keyword=物业劝阻老人拉线充电动车被追打)
 1. [约旦联合多国继续向加沙空投物资](https://so.toutiao.com/search?keyword=约旦联合多国继续向加沙空投物资)
 1. [外交部谈巴以冲突：人类的悲剧](https://so.toutiao.com/search?keyword=外交部谈巴以冲突：人类的悲剧)
 1. [小米SU7对比竞品定价多少合适](https://so.toutiao.com/search?keyword=小米SU7对比竞品定价多少合适)
@@ -98,7 +114,6 @@
 1. [韩称若朝鲜挑衅将采取先斩后奏措施](https://so.toutiao.com/search?keyword=韩称若朝鲜挑衅将采取先斩后奏措施)
 1. [嫌犯借如厕越窗坠亡 公安局赔110万](https://so.toutiao.com/search?keyword=嫌犯借如厕越窗坠亡+公安局赔110万)
 1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
-1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
 1. [北约秘书长回应“举白旗”言论](https://so.toutiao.com/search?keyword=北约秘书长回应“举白旗”言论)
 1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
 1. [雷蒙多宣称要确保尖端技术美有中无](https://so.toutiao.com/search?keyword=雷蒙多宣称要确保尖端技术美有中无)
