--- a/archives/toutiao-search/2024-03-13.md
+++ b/archives/toutiao-search/2024-03-13.md
@@ -1,59 +1,72 @@
 # 2024-03-13
 
-共 137 条
+共 148 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Mar 13 2024 08:24:47 GMT+0800 (China Standard Time) -->
-1. [警方通报网传隧道内开车门恶意别车](https://so.toutiao.com/search?keyword=警方通报网传隧道内开车门恶意别车)
-1. [拜登锁定美总统选举民主党候选人提名](https://so.toutiao.com/search?keyword=拜登锁定美总统选举民主党候选人提名)
+<!-- 最后更新时间 Wed Mar 13 2024 09:40:22 GMT+0800 (China Standard Time) -->
+1. [交警通报车辆隧道内开门恶意别车](https://so.toutiao.com/search?keyword=交警通报车辆隧道内开门恶意别车)
+1. [名嘴：096型核潜艇全世界最安静](https://so.toutiao.com/search?keyword=名嘴：096型核潜艇全世界最安静)
 1. [一组数字带你看中国的绿色奇迹](https://so.toutiao.com/search?keyword=一组数字带你看中国的绿色奇迹)
 1. [点读机女孩MCN负责人接受调查](https://so.toutiao.com/search?keyword=点读机女孩MCN负责人接受调查)
-1. [邻居家拉起警戒线 女子称不敢回家](https://so.toutiao.com/search?keyword=邻居家拉起警戒线+女子称不敢回家)
+1. [拜登锁定美总统选举民主党候选人提名](https://so.toutiao.com/search?keyword=拜登锁定美总统选举民主党候选人提名)
 1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
-1. [莫迪观摩军演 演训战机在附近坠毁](https://so.toutiao.com/search?keyword=莫迪观摩军演+演训战机在附近坠毁)
-1. [老凤祥手镯金丝配重构成欺诈吗](https://so.toutiao.com/search?keyword=老凤祥手镯金丝配重构成欺诈吗)
-1. [黄金和比特币为何价格飙升](https://so.toutiao.com/search?keyword=黄金和比特币为何价格飙升)
-1. [董宇辉与古尔纳对谈聊了些什么](https://so.toutiao.com/search?keyword=董宇辉与古尔纳对谈聊了些什么)
-1. [网友热议清明调休：摒弃拼凑式假期](https://so.toutiao.com/search?keyword=网友热议清明调休：摒弃拼凑式假期)
-1. [公园把树挖了搞植树节？不实](https://so.toutiao.com/search?keyword=公园把树挖了搞植树节？不实)
-1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
-1. [70岁成龙活动近照](https://so.toutiao.com/search?keyword=70岁成龙活动近照)
-1. [多个武装组织声称“侵入俄西部”](https://so.toutiao.com/search?keyword=多个武装组织声称“侵入俄西部”)
-1. [官方回应男孩穿裙子替女孩亲子鉴定](https://so.toutiao.com/search?keyword=官方回应男孩穿裙子替女孩亲子鉴定)
-1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
+1. [国开行原副行长李吉平被查](https://so.toutiao.com/search?keyword=国开行原副行长李吉平被查)
+1. [男子花390万买二楼商铺却上不去楼](https://so.toutiao.com/search?keyword=男子花390万买二楼商铺却上不去楼)
+1. [海关查获伪装成皮带扣的426克足金](https://so.toutiao.com/search?keyword=海关查获伪装成皮带扣的426克足金)
 1. [夫妻吵架 妻子秒变“羊驼”吐口水](https://so.toutiao.com/search?keyword=夫妻吵架+妻子秒变“羊驼”吐口水)
-1. [巴萨自19/20赛季后首次晋级欧冠8强](https://so.toutiao.com/search?keyword=巴萨自19/20赛季后首次晋级欧冠8强)
-1. [女子24年后取出10岁时的存款](https://so.toutiao.com/search?keyword=女子24年后取出10岁时的存款)
-1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
+1. [70岁成龙活动近照](https://so.toutiao.com/search?keyword=70岁成龙活动近照)
+1. [公园把树挖了搞植树节？不实](https://so.toutiao.com/search?keyword=公园把树挖了搞植树节？不实)
+1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
+1. [英国首次放出激光武器试验视频](https://so.toutiao.com/search?keyword=英国首次放出激光武器试验视频)
+1. [马龙爆冷不敌德国选手](https://so.toutiao.com/search?keyword=马龙爆冷不敌德国选手)
+1. [老凤祥手镯金丝配重构成欺诈吗](https://so.toutiao.com/search?keyword=老凤祥手镯金丝配重构成欺诈吗)
+1. [国内金价屡创新高](https://so.toutiao.com/search?keyword=国内金价屡创新高)
+1. [网友热议清明调休：摒弃拼凑式假期](https://so.toutiao.com/search?keyword=网友热议清明调休：摒弃拼凑式假期)
+1. [董宇辉与古尔纳对谈聊了些什么](https://so.toutiao.com/search?keyword=董宇辉与古尔纳对谈聊了些什么)
+1. [莫迪观摩军演 演训战机在附近坠毁](https://so.toutiao.com/search?keyword=莫迪观摩军演+演训战机在附近坠毁)
+1. [黄金和比特币为何价格飙升](https://so.toutiao.com/search?keyword=黄金和比特币为何价格飙升)
+1. [官方回应男孩穿裙子替女孩亲子鉴定](https://so.toutiao.com/search?keyword=官方回应男孩穿裙子替女孩亲子鉴定)
+1. [律师：扣全部押金房东涉寻衅滋事](https://so.toutiao.com/search?keyword=律师：扣全部押金房东涉寻衅滋事)
+1. [雷军称小米汽车三年之约已到](https://so.toutiao.com/search?keyword=雷军称小米汽车三年之约已到)
+1. [网民造谣荒地里树红绿灯被拘10日](https://so.toutiao.com/search?keyword=网民造谣荒地里树红绿灯被拘10日)
+1. [邻居家拉起警戒线 女子称不敢回家](https://so.toutiao.com/search?keyword=邻居家拉起警戒线+女子称不敢回家)
 1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
-1. [杨紫琼回应奥斯卡颁奖礼上疑遭歧视](https://so.toutiao.com/search?keyword=杨紫琼回应奥斯卡颁奖礼上疑遭歧视)
-1. [男子对女模特从下向上拍 客服回应](https://so.toutiao.com/search?keyword=男子对女模特从下向上拍+客服回应)
-1. [男子2万买金镯发现内藏2根金丝](https://so.toutiao.com/search?keyword=男子2万买金镯发现内藏2根金丝)
+1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
+1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
+1. [联合vs新月马宁共出1红9黄](https://so.toutiao.com/search?keyword=联合vs新月马宁共出1红9黄)
+1. [拉亚当选阿森纳vs波尔图全场最佳](https://so.toutiao.com/search?keyword=拉亚当选阿森纳vs波尔图全场最佳)
 1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
-1. [乌无人机连续袭击 俄能源设施起火](https://so.toutiao.com/search?keyword=乌无人机连续袭击+俄能源设施起火)
-1. [律师：点读机女孩事件行为人可判3年](https://so.toutiao.com/search?keyword=律师：点读机女孩事件行为人可判3年)
-1. [华为公司申请充电提醒专利](https://so.toutiao.com/search?keyword=华为公司申请充电提醒专利)
+1. [多个武装组织声称“侵入俄西部”](https://so.toutiao.com/search?keyword=多个武装组织声称“侵入俄西部”)
+1. [杨紫琼回应奥斯卡颁奖礼上疑遭歧视](https://so.toutiao.com/search?keyword=杨紫琼回应奥斯卡颁奖礼上疑遭歧视)
+1. [女子24年后取出10岁时的存款](https://so.toutiao.com/search?keyword=女子24年后取出10岁时的存款)
+1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
+1. [男子2万买金镯发现内藏2根金丝](https://so.toutiao.com/search?keyword=男子2万买金镯发现内藏2根金丝)
 1. [韩作家称“汉字由韩国人创造”](https://so.toutiao.com/search?keyword=韩作家称“汉字由韩国人创造”)
+1. [快递上门“最后一公里”难在哪里](https://so.toutiao.com/search?keyword=快递上门“最后一公里”难在哪里)
+1. [男子对女模特从下向上拍 客服回应](https://so.toutiao.com/search?keyword=男子对女模特从下向上拍+客服回应)
+1. [哥哥辅导弟弟数学“血压飙升”](https://so.toutiao.com/search?keyword=哥哥辅导弟弟数学“血压飙升”)
+1. [月薪八千招不到快递员背后](https://so.toutiao.com/search?keyword=月薪八千招不到快递员背后)
+1. [乌无人机连续袭击 俄能源设施起火](https://so.toutiao.com/search?keyword=乌无人机连续袭击+俄能源设施起火)
+1. [专家：地方财政如何布局长效增长](https://so.toutiao.com/search?keyword=专家：地方财政如何布局长效增长)
+1. [船老大为救16人斩断价值36万元蟹笼](https://so.toutiao.com/search?keyword=船老大为救16人斩断价值36万元蟹笼)
+1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
+1. [大叔一天只吃1根萝卜 小伙赠送盒饭](https://so.toutiao.com/search?keyword=大叔一天只吃1根萝卜+小伙赠送盒饭)
+1. [孙俪线下活动造型](https://so.toutiao.com/search?keyword=孙俪线下活动造型)
+1. [知情人：大马赴杭失联女子已被找到](https://so.toutiao.com/search?keyword=知情人：大马赴杭失联女子已被找到)
+1. [律师：点读机女孩事件行为人可判3年](https://so.toutiao.com/search?keyword=律师：点读机女孩事件行为人可判3年)
+1. [警方通报网传隧道内开车门恶意别车](https://so.toutiao.com/search?keyword=警方通报网传隧道内开车门恶意别车)
+1. [巴萨自19/20赛季后首次晋级欧冠8强](https://so.toutiao.com/search?keyword=巴萨自19/20赛季后首次晋级欧冠8强)
+1. [华为公司申请充电提醒专利](https://so.toutiao.com/search?keyword=华为公司申请充电提醒专利)
 1. [点读机女孩关联MCN自称孵化刘畊宏](https://so.toutiao.com/search?keyword=点读机女孩关联MCN自称孵化刘畊宏)
 1. [纳斯达克中国金龙指数涨近4%](https://so.toutiao.com/search?keyword=纳斯达克中国金龙指数涨近4%)
 1. [车辆隧道内突然变道加速开车门](https://so.toutiao.com/search?keyword=车辆隧道内突然变道加速开车门)
-1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
 1. [金价上涨带火黄金积存业务](https://so.toutiao.com/search?keyword=金价上涨带火黄金积存业务)
 1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
-1. [联合vs新月马宁共出1红9黄](https://so.toutiao.com/search?keyword=联合vs新月马宁共出1红9黄)
-1. [国内金价屡创新高](https://so.toutiao.com/search?keyword=国内金价屡创新高)
-1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
 1. [点读机女孩需要承担法律责任吗](https://so.toutiao.com/search?keyword=点读机女孩需要承担法律责任吗)
-1. [知情人：大马赴杭失联女子已被找到](https://so.toutiao.com/search?keyword=知情人：大马赴杭失联女子已被找到)
-1. [快递上门“最后一公里”难在哪里](https://so.toutiao.com/search?keyword=快递上门“最后一公里”难在哪里)
-1. [孙俪线下活动造型](https://so.toutiao.com/search?keyword=孙俪线下活动造型)
 1. [美股收评：三大指数集体收涨](https://so.toutiao.com/search?keyword=美股收评：三大指数集体收涨)
-1. [月薪八千招不到快递员背后](https://so.toutiao.com/search?keyword=月薪八千招不到快递员背后)
 1. [女主播泼水节遭围攻 同事出手帮助](https://so.toutiao.com/search?keyword=女主播泼水节遭围攻+同事出手帮助)
 1. [新月2-0联合总比分4-0进亚冠4强](https://so.toutiao.com/search?keyword=新月2-0联合总比分4-0进亚冠4强)
-1. [雷军称小米汽车三年之约已到](https://so.toutiao.com/search?keyword=雷军称小米汽车三年之约已到)
 1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
-1. [船老大为救16人斩断价值36万元蟹笼](https://so.toutiao.com/search?keyword=船老大为救16人斩断价值36万元蟹笼)
 1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
 1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
 1. [微信朋友圈显示的横线为啥有长有短](https://so.toutiao.com/search?keyword=微信朋友圈显示的横线为啥有长有短)
@@ -124,8 +137,6 @@
 1. [林诗栋：没想到能赢樊振东](https://so.toutiao.com/search?keyword=林诗栋：没想到能赢樊振东)
 1. [外媒：中国在以西方梦想的速度增长](https://so.toutiao.com/search?keyword=外媒：中国在以西方梦想的速度增长)
 1. [俄军一架载有15人的运输机坠毁](https://so.toutiao.com/search?keyword=俄军一架载有15人的运输机坠毁)
-1. [大叔一天只吃1根萝卜 小伙赠送盒饭](https://so.toutiao.com/search?keyword=大叔一天只吃1根萝卜+小伙赠送盒饭)
-1. [哥哥辅导弟弟数学“血压飙升”](https://so.toutiao.com/search?keyword=哥哥辅导弟弟数学“血压飙升”)
 1. [海关查获一批可能携带病毒的旧衣物](https://so.toutiao.com/search?keyword=海关查获一批可能携带病毒的旧衣物)
 1. [波音安全问题吹哨人疑似开枪自杀](https://so.toutiao.com/search?keyword=波音安全问题吹哨人疑似开枪自杀)
 1. [男子供养女友和其老公被骗百万愿谅解](https://so.toutiao.com/search?keyword=男子供养女友和其老公被骗百万愿谅解)
